# experiment-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
components/: __init__.py
components/cifar10/: common.py  data.py  loss.py  metric.py  model.py  testing.py  training.py  validation.py
configs/: cifar10_basic.toml  example.toml  example_builtin_components.toml  example_explicit.toml  example_local_registered.toml
eval_pipeline/: __init__.py  __main__.py  cli.py  config.py  context.py  importing.py  registry.py  tracking.py
eval_pipeline/components/: __init__.py
eval_pipeline/components/data/: __init__.py  base.py  build.py
eval_pipeline/components/losses/: __init__.py  base.py  build.py  mse.py
eval_pipeline/components/metrics/: __init__.py  base.py  build.py  dice.py  mae.py  mse.py
eval_pipeline/components/models/: __init__.py  base.py  build.py  (+1 more)
eval_pipeline/core/: __init__.py  config.py  context.py  importing.py  registry.py
eval_pipeline/interfaces/: __init__.py  data.py  loss.py  metric.py  model.py  pipeline.py  prediction.py  testing.py  tracking.py  training.py  types.py  validation.py
eval_pipeline/utils/: __init__.py  device.py
examples/cifar10/: __init__.py  common.py  data.py  loss.py  metric.py  model.py  testing.py  training.py  validation.py
tests/: test_cifar10_checkpoint.py  test_cifar10_common.py  test_cifar10_training.py  test_cli.py  test_config_device.py  test_interfaces.py  test_local_tracker.py  test_mlflow_tracker.py  test_model_factory_checkpoint.py  test_torch_checkpoint.py
(+25 files in other folders)
